almost final push

--- a/app/views/application/authenticate_foursq.html.erb
+++ b/app/views/application/authenticate_foursq.html.erb
@@ -1,5 +1,7 @@
-<h2>Please re-confirm your FourSquare account by clicking below</h2>
+<h2>Thank you for confirming your FourSquare account with us.</h2>
 
-<a href="https://foursquare.com/oauth2/access_token?client_id=NVB2TLBGE5SWYUNIPL3NWDB1S3ICQW1IIKD0W4CBTKLFCTRE&client_secret=HV4WHKBBXARKI0SXYKJ0GSG5XEYWMKX2CDJZQU53NI10TOLG&grant_type=authorization_code&redirect_uri=http://localhost:3000&code=">
-	<button id="final-foursq-auth">Verify your FourSquare Account Here</button>
+<h3>You can return to the homepage by clicking the button below</h3>
+<a href="http://localhost:3000/users/" + <% current_user.id %>  >
+	<button>Check It Brough Home</button>
 </a>
+
