--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,3 @@
-<h2>Welcome to the Check It Brough App, Brough!</h2>
+<h2>Welcome to the Check It Out Brough App, Brough!</h2>
 
-<h3>Here are your list places</h3>
+<img src="http://41.media.tumblr.com/86cdb2e213f3ef30d0175f83ea0c7ac4/tumblr_n3ddqdJCHT1rm3k0go1_1280.jpg" alt="">
