--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,15 +2,15 @@
 
 	<h3>Set up your new account here.</h3>
 
-	<br><%= f.label :username %>
-	<br><%= f.text_field :username %>
+	<br><%= f.label :username %> <br>
+	<br><%= f.text_field :username %> <br>
 	
-	<br><%= f.label :password %>
-	<br><%= f.password_field :password %>
+	<br><%= f.label :password %> <br>
+	<br><%= f.password_field :password %> <br>
 
-	<br><%= f.label :password_confirmation %>
-	<br><%= f.password_field :password_confirmation %>
+	<br><%= f.label :password_confirmation %> <br>
+	<br><%= f.password_field :password_confirmation %> <br>
 	
-	<h3>Click 'create user' to authorize Four Square to use my app</h3>
+	<h5>Click 'create user' to authorize FourSquare to use this suite app</h3>
 	<%= f.submit %>
 <% end %>
