--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<h3>Enter your destination address here to find which of your ToDo List places are within .35 miles ...</h2>
+<h3>Enter your destination and how many minutes away by foot you'd like to search...</h2>
 
-<input type="text" id="address-input"name="Destination" placeholder = "Destination...">
+<input type="text" id="address-input"name="Destination" placeholder="Destination...">
+<input type="number" id="minutes-input" name="Minutes" placeholder="Minutes...">
 <button id="address-check-button">Check Places...</button>
 
 <h3>Here are your ToDo List places</h3>
@@ -23,6 +24,3 @@
 			</p>
 	<% end %>
 </div>
-
-
-
