--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,13 +1,14 @@
-body {
+body, html {
 	width: 100%;
-	height: auto;
-/*	position: absolute;*/
-	top: 0;
-	left: 0;
+	height: 100%;
+	margin: 0;
+}
+body {
 	text-align: center;
 	font-family: Verdana;
-	margin: 0;
+	font-weight: 900;
 	overflow: scroll;
+	background-color: ghostwhite;
 }
 
 #topbar a {
@@ -16,11 +17,11 @@ body {
 
 #topbar {
 	text-decoration: none;
-	display: block;
 	width: 100%;
 	height: 75px;
 	background-color: DodgerBlue;
 	color: white;
+	box-sizing: border-box;
 	padding: 15px;
 }
 #topbar h1 {
@@ -28,17 +29,19 @@ body {
 	padding-top: 10px;
 }
 #sub-topbar{
-	display: block;
 	width: 100%;
-	height: auto;
-	margin-top: -22px;
-	padding: 1px;
+	height: 40px;
+	margin-top: -18px;
 	background-color: LightSkyBlue;
 	color: white;
 }
 
+#sub-topbar p {
+	padding-top: 9px;
+}
+
 #bottombar {
-  	position:fixed;
+  	position: fixed;
   	bottom:0;
   	height:45px;
   	width: 100%;
@@ -47,11 +50,15 @@ body {
 	color: white;
 	padding-bottom: 5px;
 	padding-left: 3px;
+	margin-top: 10px;
 }
 #results-container {
+	margin-bottom: 45px;
+	min-height: 400px;
 	overflow: scroll;
 }
 .user_list_item {
+	border-radius: 10px;
 	border-style: ridge;
 	border-width: 5px;
 	border-bottom-color: LightSkyBlue;
