heroku again again again, oh man

--- a/app/views/application/authenticate_foursq.html.erb
+++ b/app/views/application/authenticate_foursq.html.erb
@@ -1,7 +1,7 @@
 <h2>Thank you for confirming your FourSquare account with us.</h2>
 
 <h3>Thanks for signing up!!! Click below to log in...</h3>
-<a href="http://localhost:3000/sessions/new"
+<a href="http://thawing-headland-7058.herokuapp.com/sessions/new"
 	<button>Check It Out Brough Login...</button>
 </a>
 
