--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="topbar">
-		<a href="http://localhost:3000" style="color:white;">
+		<a href="http://thawing-headland-7058.herokuapp.com" style="color:white;">
 			<h1>Check It Out Brough</h1>
 		</a>
 	</div>
